--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,14 +1,47 @@
-name: Terraform DEV Destroy
+name: Terraform DEV
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
+  pull_request:
 
 env:
   MY_PREFIX: DEV
-  TF_VERSION: 1.2.6
+  TF_VERSION: 1.2.5
 
 jobs:
+  SCAN:
+    name: SCAN
+    runs-on: ubuntu-latest
+    # env:
+    #   working-directory: terraform
+    #   TF_WORKSPACE: my-workspace
+    steps:
+      # - name: Configure AWS credentials
+      #   uses: aws-actions/configure-aws-credentials@v1
+      #   with:
+      #     aws-region: eu-west-1
+
+      - name: Check out code
+        uses: actions/checkout@v3
+        
+      - name: Run Terrascan
+        id: terrascan
+        uses: tenable/terrascan-action@main
+        with:
+          iac_type: 'terraform'
+          iac_version: 'v14'
+          policy_type: 'aws'
+          only_warn: true
+          sarif_upload: true
+
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: terrascan.sarif  
   Terraform:
+    needs: SCAN
     name: Terraform
     runs-on: ubuntu-latest
     steps:
@@ -20,6 +53,11 @@ jobs:
           terraform_version: $TF_VERSION
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
+      - name: Terraform Fmt
+        id: fmt
+        run: terraform fmt -recursive -check
+        continue-on-error: true
+
       - name: Terraform init
         id: init
         run: terraform init -upgrade
@@ -29,9 +67,46 @@ jobs:
         id: validate
         run: terraform validate -no-color
 
-      - name: Terraform destroy
-        id: Destory
-        run: terraform destroy -auto-approve -var=prefix="$MY_PREFIX"
+      - name: Terraform plan
+        id: plan
+        run: terraform plan -no-color -var=prefix="$MY_PREFIX"
+        # working-directory: ${{ env.working-directory }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_LOG: info
+
+      - name: Plan output
+        id: output
+        uses: actions/github-script@v3
+        if: github.event_name == 'pull_request'
+        env:
+          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+            #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+            <details><summary>Show Plan</summary>
+            \`\`\`hcl
+            ${process.env.PLAN}
+            \`\`\`
+            </details>
+            **Pusher**: @${{ github.actor }}
+            **Action**: ${{ github.event_name }}
+            `;
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
+
+      - name: Terraform apply
+        id: apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve -var=prefix="$MY_PREFIX" -input=false
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
